Fixed banner changing size on ios

--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ body {
 .section-hero {
   margin-top: 0;
   padding: 0;
-  width: 100vw;
-  height: 85vh;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
   position: relative;
 }
